# AIarchitect

./: .env.example  .gitignore  .prettierignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
apps/api/alembic/: README.md  env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_onboarding_task_progress.py  0003_runtime_build_jobs.py  0004_playground_inference_runs.py  0005_code_snippet_bundles.py
apps/api/src/solution_planning_api/: __init__.py  config.py  main.py
apps/api/src/solution_planning_api/api/: __init__.py  deps.py  health.py
apps/api/src/solution_planning_api/api/routes/: __init__.py  auth.py  candidates.py  code_snippets.py  onboarding.py  playground.py  projects.py  recommendations.py  registry.py  requirements.py  runtime_build.py  selection.py
apps/api/src/solution_planning_api/api/schemas/: auth.py  code_snippets.py  inference_playground.py  onboarding.py  project.py  (+4 more)
apps/api/src/solution_planning_api/application/: __init__.py  errors.py  unset.py
apps/api/src/solution_planning_api/domain/: __init__.py  architecture_pattern.py  architecture_selection.py  architecture_template.py  capability_block.py  code_snippet_bundle.py  common.py  constraint_profile.py  evaluation_plan.py  inference_playground.py  integration_package.py  onboarding.py  requirement_profile.py  runtime_build.py  runtime_component.py  runtime_graph.py  scoring.py  solution_candidate.py  task_graph.py  workspace.py
apps/api/src/solution_planning_api/infrastructure/: __init__.py
apps/api/src/solution_planning_api/registry_data/: __init__.py  architecture_templates.yaml  capabilities.yaml
apps/api/tests/: test_critical_flows.py
(+166 files in other folders)
