[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solution-planning-api"
version = "0.1.0"
description = "AI Solution Planning Engine — FastAPI backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30.0",
  "alembic>=1.14.0",
  "bcrypt>=4.2.0",
  "pyjwt>=2.9.0",
  "email-validator>=2.0.0",
  "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.8.0",
  "mypy>=1.13.0",
  "psycopg[binary]>=3.2.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/solution_planning_api"]

[tool.hatch.build.targets.wheel.force-include]
"src/solution_planning_api/registry_data/__init__.py" = "solution_planning_api/registry_data/__init__.py"
"src/solution_planning_api/registry_data/capabilities.yaml" = "solution_planning_api/registry_data/capabilities.yaml"
"src/solution_planning_api/registry_data/architecture_templates.yaml" = "solution_planning_api/registry_data/architecture_templates.yaml"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["solution_planning_api"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["alembic.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["jwt.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["yaml.*"]
ignore_missing_imports = true
